<resources>
    <!-- Main activity -->
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="action_share">Share</string>
    <string name="action_log_out">Log Out</string>
    <string name="add_to_bag">Add</string>
    <string name="hint_ware">Item</string>
    <string name="hint_quantity">Qt.</string>

    <!-- Confirmation / Dioalog -->
    <string name="confirmation">Confirmation</string>
    <string name="areYouSure">Are you sure that you want to clear all items?</string>
    <string name="yes">Clear all items</string>
    <string name="no">Cancel</string>

    <!-- Units -->

    <string-array name="measurement_array_metric">
        <item>kg</item>
        <item>gr</item>
        <item>ml</item>
        <item>L</item>
        <item>pcs</item>
    </string-array>

    <string-array name="measurement_array_imperial">
        <item>lbs</item>
        <item>cup</item>
        <item>oz</item>
        <item>gal</item>
        <item>pcs</item>
    </string-array>

    <!-- Login / Signup / Forgot Password -->
    <string name="email">Email</string>
    <string name="password_length">Your password must be at least 6 characters.</string>
    <string name="auth_failed">Oops, something went wrong!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Reset Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="register">Sign up</string>
    <string name="login">Log in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password_confirmation">Enter your email and check your inbox for a password reset mail</string>

</resources>
