<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLightGrey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.projects.shoppinglist.MainActivity"
    tools:showIn="@layout/activity_main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginMail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="6dp">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorLightGrey"
            android:dividerHeight="10dp"
            android:background="@color/colorListViewBackground"
            android:footerDividersEnabled="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <EditText
            android:id="@+id/inputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:nextFocusLeft="@+id/inputItem"
            android:nextFocusUp="@+id/inputItem"
            android:singleLine="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_ware"
            android:textColorHint="@color/colorMediumGrey"/>

            <EditText
                android:id="@+id/inputSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:singleLine="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_quantity"
                android:textColorHint="@color/colorMediumGrey"
                />

        <Spinner
            android:id="@+id/inputMeasurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:entries="@array/measurement_array_metric" />



        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_bag"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>
